# ai-service-desk

./: .dockerignore  .gitignore  Dockerfile  README.md  locust.py  profile_test.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b87bd32f7d04_create_ticket_tables.py  df08d1fab4e1_add_assigne_email.py
app/: main.py
app/api/: ai.py  tickets.py
app/core/: config.py  deps.py
app/db/: database.py
app/models/: ticket.py
app/repositories/: ticket_repository.py
app/schemas/: ticket.py
app/services/: bedrock.py  ticket_service.py
app/services/aws_service/: bedrock.py  prompt_templates.py
tests/: conftest.py  test_ticket_schema.py
tests/integration/: test_ticket_create_api.py  test_ticket_delete.py  test_ticket_get.py  test_ticket_update_api.py
tests/unit/: test_ticket_create.py  test_ticket_update.py
